Code Quality: Replace deprecated constructor call and fix unchecked assignment warning (#1000)
Code Quality fix to replace deprecated constructors on `URL(java.lang.String) with the recommended `URI().toURL()` method instead
Fix waring with "Warning:(42, 16) Unchecked assignment: 'java.util.HashMap' to 'java.util.Map<java.lang.String,java.lang.Object>'"